[package]
name = "carbon-legacy"
version = "0.10.0"
edition = { workspace = true }
description = "Legacy support for transition from Solana SDK v2 -> v3"
license = { workspace = true }
keywords = ["solana", "indexer", "legacy"]
categories = ["encoding"]

[dependencies]
solana-account = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-message = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-context = { workspace = true }
solana-transaction-status = { workspace = true }

legacy-solana-account = { package = "solana-account", version = "2.2.1" }
legacy-solana-message = { package = "solana-message", version = "2.4.0" }
legacy-solana-pubkey = { package = "solana-pubkey", version = "2.4.0" }
legacy-solana-transaction = { package = "solana-transaction", version = "2.2.3" }
legacy-solana-transaction-status = { package = "solana-transaction-status", version = "2.3.10" }

bincode = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spl-token = { workspace = true }

[lib]
crate-type = ["rlib"]
