[package]
name = "carbon-macros"
version = "0.5.0"
edition = { workspace = true }
description = "Macros for Carbon"
license = { workspace = true }

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

hex = { workspace = true }
paste = { workspace = true }

[lib]
crate-type = ["rlib"]
