[package]
name = "carbon-macros"
version = "0.8.1"
edition = { workspace = true }
description = "Macros for Carbon"
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "macros"]
categories = ["encoding"]

[dependencies]
solana-client = { workspace = true }
solana-pubkey = { workspace = true }
solana-transaction-status = { workspace = true }

hex = { workspace = true }
paste = { workspace = true }

[lib]
crate-type = ["rlib"]
