[package]
name = "carbon-macros"
version = "0.9.1"
edition = { workspace = true }
description = "Macros for Carbon"
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "macros"]
categories = ["encoding"]

[dependencies]

[lib]
crate-type = ["rlib"]
