[package]
name = "carbon-postgres-client"
version = "0.8.1"
edition = { workspace = true }
description = "PostgreSQL Client for Carbon"
license = { workspace = true }
keywords = ["solana", "indexer", "postgres", "db"]
categories = ["encoding"]

[dependencies]
chrono = { workspace = true }
juniper = { workspace = true }
juniper_graphql_ws = { workspace = true }
sqlx = { workspace = true }
sqlx_migrator = { workspace = true }

[lib]
crate-type = ["rlib"]
