[package]
name = "carbon-postgres-client"
version = "0.9.1"
edition = { workspace = true }
description = "PostgreSQL Client for Carbon"
license = { workspace = true }
keywords = ["solana", "indexer", "postgres", "db"]
categories = ["encoding"]

[dependencies]
juniper = { workspace = true }
sqlx = { workspace = true }
sqlx_migrator = { workspace = true }

[lib]
crate-type = ["rlib"]
