[package]
name = "carbon-test-utils"
version = { workspace = true }
edition = { workspace = true }
description = "Testing utilities for Carbon"
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["rlib"]
