[package]
name = "carbon-postgres-datasink"
description = "Carbon Postgres Datasink"
license = { workspace = true }
version = "0.8.1"
edition = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "postgres", "datasink"]
categories = ["database-implementations"]

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
carbon-core = { workspace = true }
carbon-postgres-client = { workspace = true }
serde_json = { workspace = true }
solana-transaction-status = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["full"] }
