[package]
name = "carbon-bigquery-datasource"
version = "0.1.0"
edition = "2021"

[dependencies]
carbon-core = { workspace = true }
solana-sdk = "2.0.11"
solana-transaction-status = "2.0.11"
solana-client = "2.0.11"
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
gcp-bigquery-client = "0.18.0"
base64 = "0.22.1"
bincode = "1.3.3"
