[package]
name = "carbon-helius-atlas-ws-datasource"
description = "Helius Atlas WebSocket Datasource"
license = { workspace = true }
version = "0.6.0"
edition = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "helius", "datasource"]
categories = ["encoding"]

[lib]
crate-type = ["rlib"]

[dependencies]
bincode = { workspace = true }
helius = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

carbon-core = { workspace = true }

async-trait = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
