[package]
name = "carbon-helius-atlas-ws-datasource"
description = "Helius Atlas WebSocket Datasource"
license = { workspace = true }
version = "0.10.0"
edition = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "helius", "datasource"]
categories = ["encoding"]

[lib]
crate-type = ["rlib"]

[dependencies]
bincode = { workspace = true }
helius = { workspace = true }
solana-account = { workspace = true }
solana-clock = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-system-interface = { workspace = true }

carbon-core = { workspace = true }
carbon-legacy = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
