[package]
name = "carbon-helius-gpa-v2-datasource"
description = "Helius gPA V2 Datasource - Fetches program accounts using Helius getProgramAccountsV2 with pagination and changedSinceSlot support"
license = { workspace = true }
version = "0.12.0"
edition = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "helius", "datasource", "gpa"]
categories = ["encoding"]

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
carbon-core = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account = { workspace = true }
solana-client = { workspace = true }
solana-pubkey = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

