[package]
name = "carbon-helius-gtfa-datasource"
description = "Helius GTFA Datasource - Fetches transactions for an address using Helius getTransactionsForAddress with advanced filtering, sorting, and pagination"
license = { workspace = true }
version = "0.12.0"
edition = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "helius", "datasource", "gtfa", "transactions"]
categories = ["encoding"]

[lib]
crate-type = ["rlib"]

[dependencies]
solana-commitment-config = { workspace = true }
solana-client = { workspace = true }
solana-pubkey = { workspace = true }
solana-transaction-status = { workspace = true }

carbon-core = { workspace = true }

async-trait = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
