[package]
name = "carbon-jetstreamer-datasource"
description = "Carbon Jetstreamer Datasource"
license = { workspace = true }
version = "0.12.0"
edition = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "jetstreamer", "datasource"]
categories = ["encoding"]

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
carbon-core = { workspace = true }
futures-util = { workspace = true }
jetstreamer-firehose = "0.2.0"
solana-pubkey = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
