[package]
name = "carbon-rpc-block-subscribe-datasource"
description = "RPC Block Subscribe Datasource"
license = { workspace = true }
version = "0.8.0"
edition = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "block", "datasource"]
categories = ["encoding"]

[dependencies]
solana-client = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk = { workspace = true }

carbon-core = { workspace = true }

async-trait = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
