[package]
name = "carbon-rpc-gpa-datasource"
description = "RPC gPA Datasource - Fetches all accounts for a program using getProgramAccounts"
license = { workspace = true }
version = "0.12.0"
edition = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "account", "datasource", "backfill", "gpa"]
categories = ["encoding"]

[lib]
crate-type = ["rlib"]

[dependencies]
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-pubkey = { workspace = true }

carbon-core = { workspace = true }

async-trait = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

