[package]
name = "carbon-rpc-transaction-crawler-datasource"
description = "RPC Transaction Crawler Datasource"
license = "MIT"
version = "0.4.0"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }

carbon-core = { workspace = true }

tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
async-trait = "0.1.83"
log = "0.4.22"
env_logger = "0.11.5"
async-stream = "0.3.6"
retry = "2.0.0"
futures = "0.3.30"
tokio-retry = "0.3.0"
