[package]
name = "carbon-rpc-transaction-crawler-datasource"
description = "RPC Transaction Crawler Datasource"
license = { workspace = true }
version = "0.5.0"
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

carbon-core = { workspace = true }

async-stream = { workspace = true }
async-trait = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
retry = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-retry = { workspace = true }
tokio-util = { workspace = true }
