[package]
name = "carbon-yellowstone-grpc-datasource"
description = "Yellowstone gRPC Datasource"
license = { workspace = true }
version = "0.5.1"
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

carbon-core = { workspace = true }

async-trait = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
